# tokenslim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DOCKER.md  api.md  caching.md  cli.md  compressors.md  index.md  integrations.md  llms.txt  quickstart.md  reversibility.md
src/tokenslim/: __init__.py  __main__.py  audit.py  cache.py  capture.py  ccr.py  cli.py  compress.py  config.py  context.py  detector.py  evals.py  formats.py  images.py  integrations.py  integrations_agents.py  integrations_langchain.py  learn.py  mcp_server.py  memory.py  metrics.py  outputs.py  predict.py  pricing.py  proxy.py  relevance.py  retrieve.py  router.py  semcache.py  sizer.py  store.py  telemetry.py  tokenizer.py
src/tokenslim/compressors/: __init__.py  code.py  diff.py  html.py  jsonmin.py  logs.py  search.py  smartcrusher.py  structured.py  tabular.py  text.py
src/tokenslim/evals/: __init__.py  fixtures.py  harness.py
src/tokenslim/memory/: __init__.py  embedder.py  shared.py  store.py
tests/: test_audit.py  test_auto_query.py  test_cache.py  test_capture.py  test_ccr_markers.py  test_cli.py  test_code.py  test_compress.py  test_config.py  test_context.py  test_detector.py  test_diff.py  test_evals.py  test_formats.py  test_fuzz_compress.py  test_html.py  test_images.py  test_integrations.py  test_integrations_agents.py  test_integrations_langchain.py  test_jsonmin.py  test_learn.py  test_logs.py  test_m1_remaining_integration.py  test_mcp_server.py  test_memory.py  test_memory_store.py  test_metrics.py  test_outputs.py  test_predict.py  test_pricing.py  test_proxy.py  test_relevance.py  test_retrieve.py  test_router.py  test_router_m1.py  test_search.py  test_semcache.py  test_shared_context.py  test_sizer.py  (+8 more)
