[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenslim"
version = "0.3.0"
description = "Context compression layer for LLM agents — compress tool outputs, logs, files & RAG before they hit the model. Reversible, local-first."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "robertruben98" }]
keywords = ["llm", "context", "compression", "tokens", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
]

[project.scripts]
tokenslim = "tokenslim.cli:main"

[project.urls]
Homepage = "https://github.com/robertruben98/tokenslim"
Repository = "https://github.com/robertruben98/tokenslim"
Issues = "https://github.com/robertruben98/tokenslim/issues"

[project.optional-dependencies]
# Accurate tokenization for OpenAI models.
tokenizers = ["tiktoken>=0.5"]
# ML-based content-type detection (drop-in for the rule-based detector).
ml = ["magika>=0.5"]
# Actual image resizing for reduce_image_tokens (estimates/plans work without it).
images = ["pillow>=10"]
# Embeddings for the semantic cache (SentenceTransformerEmbedder).
semantic = ["sentence-transformers>=2.2"]
# Agno agent framework (user-side only; tokenslim never imports it in core paths).
agno = ["agno>=1.0"]
# Strands agent framework (imported lazily inside TokenSlimStrandsHooks.register only).
strands = ["strands-agents>=1.0"]
# LangChain classes for integrations_langchain (the wrappers themselves are
# duck-typed and work without this extra).
langchain = ["langchain-core>=0.3"]
# Future extras (reserved; land in later milestones).
proxy = []
# MCP server (`tokenslim mcp` / `tokenslim install`): served from this package
# via the official Model Context Protocol SDK (FastMCP).
mcp = ["mcp>=1.0"]
code = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
]
memory = []
# Documentation site (mkdocs.yml + docs/): uv run --extra docs mkdocs build --strict
docs = ["mkdocs-material>=9"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.8",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "pillow>=10",
    "mcp>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tokenslim"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B905"]

[tool.ruff.lint.isort]
known-first-party = ["tokenslim"]

[tool.mypy]
python_version = "3.10"
packages = ["tokenslim"]
mypy_path = "src"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tokenslim"]
branch = true
